--- a/index.html
+++ b/index.html
@@ -48,3 +48,4 @@
   <button class="start-button" onclick="window.location.href='kategori.html'">▶️ START</button>
 </body>
 </html>
+<button onclick="window.location.href='tambah.html'" style="position: fixed; bottom: 10px; right: 10px;">🔒 Guru</button>
