--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 <body>
   <h1>Aku Bisa Bicara Mudah</h1>
   <button class="start-button" onclick="window.location.href='kategori.html'">▶️ START</button>
+  <button class="guru-button" onclick="window.location.href='tambah.html'">🔒 Mode Guru</button>
 </body>
 </html>
-<button onclick="window.location.href='tambah.html'" style="position: fixed; bottom: 10px; right: 10px;">🔒 Guru</button>
