--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
     .start-button:hover {
       background-color: #219150;
     }
+    .guru-button {
+    position: fixed;
+    top: 20px;    /* jarak dari atas */
+    right: 20px;  /* jarak dari kanan */
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: #e67e22;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    transition: background-color 0.3s ease;
+  }
+  .guru-button:hover {
+    background-color: #cf7119;
+  }
   </style>
 </head>
 <body>
