--- a/kategori.html
+++ b/kategori.html
@@ -43,7 +43,7 @@
 <body>
   <h1>Pilih Kategori</h1>
   <div class="container">
-    <button class="btn" onclick="alert('Menuju Kebutuhan Harian')">🍽️ Kebutuhan Harian</button>
+    <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="alert('Menuju Emosi & Perasaan')">😊 Emosi & Perasaan</button>
     <button class="btn" onclick="alert('Menuju Makanan & Minuman')">🍓 Makanan & Minuman</button>
     <button class="btn" onclick="alert('Menuju Salam & Sosial')">👋 Salam & Sosial</button>
