--- a/kebutuhan.html
+++ b/kebutuhan.html
@@ -5,29 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kategori Kebutuhan Harian</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8fafc;
-      margin: 0; padding: 20px; text-align: center;
-    }
+    body { font-family: Arial, sans-serif; background-color: #f8fafc; margin: 0; padding: 20px; text-align: center; }
     h1 { color: #2c3e50; }
-    .voice-select {
-      margin: 10px auto; max-width: 400px; text-align: center;
-    }
-    .voice-select select {
-      padding: 8px; font-size: 1em; border-radius: 6px; border: 1px solid #ccc;
-    }
-    .container {
-      display: grid; grid-template-columns: repeat(2,1fr);
-      gap: 20px; max-width: 600px; margin: 30px auto;
-    }
-    .item {
-      background:#fff; border:2px solid #ddd; border-radius:12px;
-      padding:20px; box-shadow:2px 2px 6px #ccc; cursor:pointer;
-    }
-    .item:hover { background:#e0f7fa; }
-    .emoji { font-size:3.5em; line-height:1; }
-    .item p { margin:8px 0 0; font-size:1.1em; color:#333; }
+    .voice-select { margin: 10px auto; max-width: 400px; text-align: center; }
+    .voice-select select { padding: 8px; font-size: 1em; border-radius: 6px; border: 1px solid #ccc; }
+    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; max-width: 600px; margin: 30px auto; }
+    .item { background: white; border: 2px solid #ddd; border-radius: 12px; padding: 20px; box-shadow: 2px 2px 6px #ccc; cursor: pointer; }
+    .item:hover { background-color: #e0f7fa; }
+    .emoji { font-size: 3.5em; line-height: 1; }
+    .item p { margin: 8px 0 0; font-size: 1.1em; color: #333; }
   </style>
 </head>
 <body>
@@ -40,63 +26,68 @@
   <div class="container" id="gridKebutuhan"></div>
 
   <script>
-    // load voices
-    let voices = [], vs = document.getElementById('voiceSelect');
+    // Load available voices
+    let voices = [];
+    const vs = document.getElementById('voiceSelect');
     function loadVoices() {
       voices = speechSynthesis.getVoices();
       vs.innerHTML = '';
-      voices.forEach((v,i)=> {
-        if (v.lang.startsWith('id')) {
-          let o = new Option(`${v.name} (${v.lang})`, i);
-          vs.add(o);
-        }
+      voices.forEach((v,i) => {
+        const option = document.createElement('option');
+        option.value = i;
+        option.textContent = `${v.name} (${v.lang})${v.localService ? ' [local]' : ''}`;
+        vs.appendChild(option);
       });
     }
     speechSynthesis.onvoiceschanged = loadVoices;
     loadVoices();
 
-    function speak(t){
-      let msg = new SpeechSynthesisUtterance(t);
+    function speak(text) {
+      const msg = new SpeechSynthesisUtterance(text);
       msg.lang = 'id-ID';
-      let sel = voices[vs.value];
-      if (sel) msg.voice = sel;
+      const selected = voices[vs.value];
+      if (selected) msg.voice = selected;
+      msg.rate = 1;
+      msg.pitch = 1;
       speechSynthesis.cancel();
       speechSynthesis.speak(msg);
     }
 
-    // ambil data
-    // Ambil data dari localStorage, jika belum ada simpan daftar default
-let arr = JSON.parse(localStorage.getItem('kosakata_kebutuhan') || 'null');
-if (!arr) {
-  arr = [
-    { teks: 'Saya mau makan', gambar: 'lapar.png' },
-    { teks: 'Saya mau minum', gambar: 'minum.png' },
-    { teks: 'Saya mau ke toilet', gambar: 'toilet.png' },
-    { teks: 'Saya mau tidur', gambar: 'tidur.png' },
-    { teks: 'Saya mau main', gambar: 'main.png' }
-  ];
-  localStorage.setItem('kosakata_kebutuhan', JSON.stringify(arr));
-}
+    // Fallback default data if localStorage empty
+    let arr = JSON.parse(localStorage.getItem('kosakata_kebutuhan') || 'null');
+    if (!arr) {
+      arr = [
+        { teks: 'Saya mau makan' },
+        { teks: 'Saya mau minum' },
+        { teks: 'Saya mau ke toilet' },
+        { teks: 'Saya mau tidur' },
+        { teks: 'Saya mau main' }
+      ];
+      localStorage.setItem('kosakata_kebutuhan', JSON.stringify(arr));
+    }
 
-// mapping teks → emoji
-const mapE = {
-  "Saya mau makan":    "🍚",
-  "Saya mau minum":    "🥤",
-  "Saya mau ke toilet":"🚽",
-  "Saya mau tidur":    "😴",
-  "Saya mau main":     "🎲"  // gunakan emoji yang lebih pas
-};
+    // Mapping teks -> emoji icon
+    const mapE = {
+      'Saya mau makan': '🍚',
+      'Saya mau minum': '🥤',
+      'Saya mau ke toilet': '🚽',
+      'Saya mau tidur': '😴',
+      'Saya mau main': '🎲'
+    };
 
-    let c = document.getElementById('gridKebutuhan');
-    if (!arr.length) c.innerHTML = '<p>Belum ada kosakata ditambahkan.</p>';
-    else arr.forEach(item=>{
-      let emo = mapE[item.teks]||'❓';
-      let d = document.createElement('div');
-      d.className='item';
-      d.innerHTML = `<div class="emoji">${emo}</div><p>${item.teks}</p>`;
-      d.onclick = ()=> speak(item.teks);
-      c.appendChild(d);
-    });
+    const c = document.getElementById('gridKebutuhan');
+    if (!arr.length) {
+      c.innerHTML = '<p>Belum ada kosakata ditambahkan.</p>';
+    } else {
+      arr.forEach(item => {
+        const emo = mapE[item.teks] || '❓';
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `<div class="emoji">${emo}</div><p>${item.teks}</p>`;
+        div.onclick = () => speak(item.teks);
+        c.appendChild(div);
+      });
+    }
   </script>
 
 </body>
