--- a/kategori.html
+++ b/kategori.html
@@ -44,7 +44,7 @@
   <h1>Pilih Kategori</h1>
   <div class="container">
     <button onclick="window.location.href='lokasi-sekolah.html'">🏫 Di Sekolah</button>
-    <button class="btn" onclick="window.location.href='lokasi-sekolah.html'">🏫 Di Sekolah</button>
+    <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🏫 Di Sekolah</button>
     <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="alert('Menuju Emosi & Perasaan')">😊 Emosi & Perasaan</button>
     <button class="btn" onclick="alert('Menuju Makanan & Minuman')">🍓 Makanan & Minuman</button>
