--- a/kategori.html
+++ b/kategori.html
@@ -44,6 +44,9 @@
   <h1>Pilih Kategori</h1>
   <div class="container">
     <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🏫 Di Sekolah</button>
+    <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🏠 Di Rumah</button>
+    <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🎠 Di Lingkungan</button>
+    <button class="btn" onclick="window.location.href='lokasi_sekolah.html'">🛒 Di Tempat Umum</button>
     <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="alert('Menuju Emosi & Perasaan')">😊 Emosi & Perasaan</button>
     <button class="btn" onclick="alert('Menuju Makanan & Minuman')">🍓 Makanan & Minuman</button>
