--- a/salamsosial.html
+++ b/salamsosial.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kategori Kebutuhan Harian</title>
+  <title>Kategori Salam & Sosial</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <script>
   window.onload = () => {
-    const container = document.getElementById('gridKebutuhan');
+    const container = document.getElementById('gridsalamsosial');
     const sel = document.getElementById('voiceSelect');
     sel.innerHTML = `
       <option value="Indonesian Female">Perempuan</option>
       <option value="Indonesian Male">Laki-laki</option>
     `;
-    const arr = JSON.parse(localStorage.getItem('kosakata_kebutuhan') || '[]');
+    const arr = JSON.parse(localStorage.getItem('kosakata_salamsosial') || '[]');
     arr.forEach(item => {
       const div = document.createElement('div');
       div.className = 'item';
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-  <h1>Kebutuhan Harian</h1>
+  <h1>Salam & Sosial</h1>
   <div class="voice-select">
     <label for="voiceSelect">Pilih Suara:</label>
     <select id="voiceSelect">
@@ -47,7 +47,7 @@
     </select>
   </div>
 
-  <div class="container" id="gridKebutuhan"></div>
+  <div class="container" id="gridsalamsosial"></div>
 
   <script>
     function speak(text) {
@@ -56,7 +56,7 @@
     }
 
     // Data default jika localStorage kosong
-    let arr = JSON.parse(localStorage.getItem('kosakata_kebutuhan') || 'null');
+    let arr = JSON.parse(localStorage.getItem('kosakata_salamsosial') || 'null');
     if (!arr) {
       arr = [
         { teks: 'Selamat pagi' },
@@ -76,7 +76,7 @@
         { teks: 'Saya sedang sakit' },
         { teks: 'Sampai jumpa' }
       ];
-      localStorage.setItem('kosakata_kebutuhan', JSON.stringify(arr));
+      localStorage.setItem('kosakata_salamsosial', JSON.stringify(arr));
     }
 
     const mapE = {
@@ -92,7 +92,7 @@
       'Saya mau main': '🎲'
     };
 
-    const container = document.getElementById('gridKebutuhan');
+    const container = document.getElementById('gridsalamsosial');
     if (!arr.length) {
       container.innerHTML = '<p>Belum ada kosakata ditambahkan.</p>';
     } else {
