--- a/salamsosial.html
+++ b/salamsosial.html
@@ -80,16 +80,22 @@
     }
 
     const mapE = {
-      'Selamat pagi': '🍚',
-      'Selamat siang': '🥤',
-      'Selamat sore': '🚽',
-      'Selamat malam': '😴',
-      'Nama kamu siapa?': '😴',
-      'Nama saya ...': '😴',
-      'Maaf': '😴',
-      'Terima kasih': '😴',
-      'Saya mau tidur': '😴',
-      'Saya mau main': '🎲'
+      'Selamat pagi': '🌄',
+      'Selamat siang': '🌤️',
+      'Selamat sore': '🌆',
+      'Selamat malam': '🌃',
+      'Nama kamu siapa?': '💁🏻‍♂️',
+      'Nama saya ...': '🙋🏻‍♀️',
+      'Maaf': '🙇🏻‍♂️',
+      'Terima kasih': '😇🙏🏻',
+      'Sama-sama': '🤗',
+      'Tolong': '🥺🙏🏻',
+      'Permisi': '🙏🏻',
+      'Saya mohon izin': '🙏🏻',
+      'Apa kabar: '🤗',
+      'Kabar saya baik': '👍🏻',
+      'Saya sedang sakit': '🤒',
+      'Sampai jumpa': '👋🏻'
     };
 
     const container = document.getElementById('gridsalamsosial');
