--- a/salam_sosial.html
+++ b/salam_sosial.html
@@ -63,7 +63,7 @@
         'Tolong': '🥺🙏🏻',
         'Permisi': '🙏🏻',
         'Saya mohon izin': '🙏🏻',
-        'Apa kabar: '🤗',
+        'Apa kabar?': '🤗',
         'Kabar saya baik': '👍🏻',
         'Saya sedang sakit': '🤒',
         'Sampai jumpa': '👋🏻',
