--- a/salam_sosial.html
+++ b/salam_sosial.html
@@ -52,8 +52,8 @@
 
       const mapE = {
         'Selamat pagi': '🌄',
-        'Selamat siang': '🌤',
-        'Selamat sore': '🌆',
+        'Selamat siang': '☀️',
+        'Selamat sore': '🌇',
         'Selamat malam': '🌉',
         'Nama kamu siapa?': '💁🏻‍♂',
         'Nama saya ...': '🙋🏻‍♀',
