--- a/salam_sosial.html
+++ b/salam_sosial.html
@@ -1,25 +1,93 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Salam & Sosial</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kategori: Salam & Sosial</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f8fafc; margin: 0; padding: 20px; text-align: center; }
-    h1 { color: #2c3e50; }
-    .voice-select { margin: 10px auto; max-width: 300px; text-align: center; }
-    .voice-select select { width: 100%; padding: 8px; font-size: 1em; border-radius: 6px; border: 1px solid #ccc; }
-    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; max-width: 600px; margin: 30px auto; }
-    .item { background: white; border: 2px solid #ddd; border-radius: 12px; padding: 20px; box-shadow: 2px 2px 6px #ccc; cursor: pointer; }
-    .item:hover { background-color: #e0f7fa; }
-    .emoji { font-size: 3.5em; line-height: 1; }
-    .item p { margin: 8px 0 0; font-size: 1.1em; color: #333; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8fafc;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #2c3e50;
+    }
+
+    .voice-select {
+      margin: 10px auto;
+      max-width: 300px;
+      text-align: center;
+    }
+
+    .voice-select select {
+      width: 100%;
+      padding: 8px;
+      font-size: 1em;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      max-width: 900px;
+      margin: 30px auto;
+    }
+
+    .item {
+      background: white;
+      border: 2px solid #ddd;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 2px 2px 6px #ccc;
+    }
+
+    .emoji {
+      font-size: 3.5em;
+      line-height: 1;
+    }
+
+    .item p {
+      margin: 8px 0;
+      font-size: 1.1em;
+      color: #333;
+    }
+
+    button {
+      font-size: 1em;
+      margin: 4px;
+      padding: 6px 12px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .btn-speak {
+      background-color: #00bcd4;
+      color: white;
+    }
+
+    .btn-test {
+      background-color: #4caf50;
+      color: white;
+    }
+
+    .feedback {
+      margin-top: 6px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
 
   <h1>Kategori: Salam & Sosial</h1>
+
   <div class="voice-select">
     <label for="voiceSelect">Pilih Suara:</label>
     <select id="voiceSelect">
@@ -27,6 +95,7 @@
       <option value="Indonesian Male">Laki-laki</option>
     </select>
   </div>
+
   <div class="container" id="gridSalam"></div>
 
   <script>
@@ -52,12 +121,12 @@
 
       const mapE = {
         'Selamat pagi': '🌄',
-        'Selamat siang': '☀️',
-        'Selamat sore': '🌇',
+        'Selamat siang': '🌤',
+        'Selamat sore': '🌆',
         'Selamat malam': '🌉',
-        'Nama kamu siapa?': '💁🏻‍♂',
-        'Nama saya ...': '🙋🏻‍♀',
-        'Maaf': '🙇🏻‍♂',
+        'Nama kamu siapa?': '💁🏻‍♂️',
+        'Nama saya ...': '🙋🏻‍♀️',
+        'Maaf': '🙇🏻‍♂️',
         'Terima kasih': '😇🙏🏻',
         'Sama-sama': '🤗',
         'Tolong': '🥺🙏🏻',
@@ -71,17 +140,74 @@
 
       const container = document.getElementById('gridSalam');
       arr.forEach(item => {
-        const emoji = mapE[item.teks] || '❓';
+        const teks = item.teks;
+        const emoji = mapE[teks] || '❓';
+        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
+
         const div = document.createElement('div');
         div.className = 'item';
-        div.innerHTML = `<div class="emoji">${emoji}</div><p>${item.teks}</p>`;
-        div.onclick = () => {
-          const voice = document.getElementById('voiceSelect').value;
-          responsiveVoice.speak(item.teks, voice);
-        };
+        div.innerHTML = `
+          <div class="emoji">${emoji}</div>
+          <p>${teks}</p>
+          <button class="btn-speak" onclick="bicara('${teks}')">🔊 Dengar</button>
+          <button class="btn-test" onclick="latih('${teks}', '${idTeks}')">🎤 Latih Ucapan</button>
+          <p class="feedback" id="feedback-${idTeks}"></p>
+        `;
         container.appendChild(div);
       });
     };
+
+    function bicara(teks) {
+      const voice = document.getElementById('voiceSelect').value;
+      responsiveVoice.speak(teks, voice);
+    }
+
+    function latih(teksTarget, id) {
+      const recognition = new webkitSpeechRecognition();
+      recognition.lang = 'id-ID';
+      recognition.interimResults = false;
+
+      recognition.onresult = (event) => {
+        const hasil = event.results[0][0].transcript.toLowerCase();
+        const skor = kemiripan(hasil, teksTarget.toLowerCase());
+        const feedback = document.getElementById("feedback-" + id);
+
+        if (skor >= 0.8) {
+          feedback.innerText = "✅ Bagus!";
+          feedback.style.color = "green";
+        } else {
+          feedback.innerText = "❌ Coba lagi. Kamu bilang: " + hasil;
+          feedback.style.color = "red";
+        }
+      };
+
+      recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi ya!");
+      recognition.start();
+    }
+
+    function kemiripan(a, b) {
+      const jarak = levenshtein(a, b);
+      return 1 - jarak / Math.max(a.length, b.length);
+    }
+
+    function levenshtein(a, b) {
+      const dp = Array(b.length + 1).fill(null).map(() => Array(a.length + 1).fill(0));
+      for (let i = 0; i <= b.length; i++) dp[i][0] = i;
+      for (let j = 0; j <= a.length; j++) dp[0][j] = j;
+
+      for (let i = 1; i <= b.length; i++) {
+        for (let j = 1; j <= a.length; j++) {
+          const cost = b[i - 1] === a[j - 1] ? 0 : 1;
+          dp[i][j] = Math.min(
+            dp[i - 1][j] + 1,
+            dp[i][j - 1] + 1,
+            dp[i - 1][j - 1] + cost
+          );
+        }
+      }
+
+      return dp[b.length][a.length];
+    }
   </script>
 
 </body>
