--- a/salam_sosial.html
+++ b/salam_sosial.html
@@ -7,8 +7,8 @@
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
-      font-family: 'Quicksand', cursive, quicksand;
-      background-color: #1e3a8a; /* biru gelap "oligarki" */
+      font-family: 'Arial', cursive, arial;
+      background-color: #80daeb; /* medium sky blue */
       margin: 0;
       padding: 20px;
       text-align: center;
