--- a/salam_sosial.html
+++ b/salam_sosial.html
@@ -120,7 +120,7 @@
         { teks: 'Selamat sore', emoji: '🌆' },
         { teks: 'Selamat malam', emoji: '🌉' },
         { teks: 'Nama kamu siapa?', emoji: '💁🏻‍♂️' },
-        { teks: 'Nama saya ...', emoji: '🙋🏻‍♀️' },
+        { teks: 'Nama saya', emoji: '🙋🏻‍♀️' },
         { teks: 'Maaf', emoji: '🙇🏻‍♂️' },
         { teks: 'Terima kasih', emoji: '😇🙏🏻' },
         { teks: 'Sama-sama', emoji: '🤗' },
