--- a/kategori.html
+++ b/kategori.html
@@ -49,9 +49,9 @@
     <button class="btn" onclick="window.location.href='lokasi_tempatumum.html'">🛒 Di Tempat Umum</button>
     <button class="btn" onclick="window.location.href='kebutuhan.html'">🍽️ Kebutuhan Harian</button>
     <button class="btn" onclick="window.location.href='salam_sosial.html'">👋 Salam & Sosial</button>
+    <button class="btn" onclick="window.location.href='emosi_perasaan.html'">👋Emosi & Perasaan</button>
     <button class="btn" onclick="alert('Menuju Emosi & Perasaan')">😊 Emosi & Perasaan</button>
     <button class="btn" onclick="alert('Menuju Makanan & Minuman')">🍓 Makanan & Minuman</button>
-    <button class="btn" onclick="alert('Menuju Salam & Sosial')">👋 Salam & Sosial</button>
     <button class="btn" onclick="alert('Menuju Tempat')">🏠 Tempat</button>
     <button class="btn" onclick="alert('Menuju Kalimat Favorit')">⭐ Favorit</button>
   </div>
