--- a/kategori.html
+++ b/kategori.html
@@ -52,7 +52,7 @@
     <button class="btn" onclick="window.location.href='emosi_perasaan.html'">👋Emosi & Perasaan</button>
     <button class="btn" onclick="alert('Menuju Makanan & Minuman')">🍓 Makanan & Minuman</button>
     <button class="btn" onclick="alert('Menuju Tempat')">🏠 Tempat</button>
-    <button class="btn" onclick="alert('Menuju Kalimat Favorit')">⭐ Favorit</button>
+    <button class="btn" onclick="window.location.href='favorit.html'">⭐ Favorit</button>
   </div>
 </body>
 </html>
