--- a/salam_sosial.html
+++ b/salam_sosial.html
@@ -42,7 +42,7 @@
     }
 
     .item {
-      position: relative;
+      position: relative; /* penting buat posisi absolute di dalamnya */
       background-color: #ffffff;
       border: 2px solid #cbd5e1;
       border-radius: 12px;
@@ -69,17 +69,40 @@
     }
 
     .controls {
-      position: absolute;
-      bottom: 8px;
-      right: 12px;
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      gap: 8px;
     }
 
+    /* Tombol favorit di kiri atas */
+    .controls button.fav {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      font-size: 1.6em;
+      color: gray;
+      background: none;
+      border: none;
+      cursor: pointer;
+      user-select: none;
+      transition: color 0.3s ease;
+      z-index: 10;
+    }
+
+    .controls button.fav.active {
+      color: gold;
+    }
+
+    /* Tombol mic di kanan bawah */
     .controls button.mic {
       background: none;
       border: none;
       font-size: 1.2em;
       cursor: pointer;
       color: #0a3d62;
+      position: relative;
+      z-index: 5;
     }
 
     .feedback {
@@ -134,36 +157,36 @@
       ]
     };
 
-    function buatGridKategori(data) {
-      document.getElementById('judulKategori').innerText = `Kategori: ${data.judul}`;
-      const container = document.getElementById('gridKategori');
-      container.innerHTML = '';
-
-      data.items.forEach(item => {
-        const teks = item.teks;
-        const emoji = item.emoji || '❓';
-        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
-
-        const div = document.createElement('div');
-        div.className = 'item';
-        div.innerHTML = `
-          <div class="emoji">${emoji}</div>
-          <p>${teks}</p>
-          <div class="controls">
-            <button class="mic" onclick="event.stopPropagation(); latih('${teks}', '${idTeks}')">🎤</button>
-          </div>
-          <p class="feedback" id="feedback-${idTeks}"></p>
-        `;
-        div.onclick = () => bicara(teks);
-        container.appendChild(div);
-      });
+    // Load favorit dari localStorage
+    function loadFavorit() {
+      return JSON.parse(localStorage.getItem('favoritList')) || [];
     }
 
+    // Simpan favorit ke localStorage
+    function saveFavorit(list) {
+      localStorage.setItem('favoritList', JSON.stringify(list));
+    }
+
+    // Toggle favorit: tambah/hapus teks
+    function toggleFavorit(teks) {
+      let favoritList = loadFavorit();
+      const idx = favoritList.indexOf(teks);
+      if (idx > -1) {
+        favoritList.splice(idx, 1);
+      } else {
+        favoritList.push(teks);
+      }
+      saveFavorit(favoritList);
+      renderGridKategori();
+    }
+
+    // Bicara pakai responsiveVoice
     function bicara(teks) {
       const voice = document.getElementById('voiceSelect').value || "Indonesian Female";
       responsiveVoice.speak(teks, voice);
     }
 
+    // Fungsi latihan bicara dengan speech recognition
     function latih(teksTarget, id) {
       soundClickMic.play();
       const recognition = new webkitSpeechRecognition();
@@ -191,6 +214,7 @@
       recognition.start();
     }
 
+    // Hitung kemiripan dua string (Levenshtein)
     function kemiripan(a, b) {
       const jarak = levenshtein(a, b);
       return 1 - jarak / Math.max(a.length, b.length);
@@ -213,8 +237,43 @@
       return dp[b.length][a.length];
     }
 
+    // Render grid kategori dengan data dan status favorit
+    function renderGridKategori() {
+      document.getElementById('judulKategori').innerText = `Kategori: ${dataKategori.judul}`;
+      const container = document.getElementById('gridKategori');
+      container.innerHTML = '';
+
+      const favoritList = loadFavorit();
+
+      dataKategori.items.forEach(item => {
+        const teks = item.teks;
+        const emoji = item.emoji || '❓';
+        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
+
+        const div = document.createElement('div');
+        div.className = 'item';
+
+        const isFavorit = favoritList.includes(teks);
+
+        div.innerHTML = `
+          <div class="emoji">${emoji}</div>
+          <p>${teks}</p>
+          <div class="controls">
+            <button class="fav ${isFavorit ? 'active' : ''}" title="${isFavorit ? 'Hapus dari Favorit' : 'Tambah ke Favorit'}" onclick="event.stopPropagation(); toggleFavorit('${teks}')">
+              ⭐
+            </button>
+            <button class="mic" title="Latih bicara" onclick="event.stopPropagation(); latih('${teks}', '${idTeks}')">🎤</button>
+          </div>
+          <p class="feedback" id="feedback-${idTeks}"></p>
+        `;
+
+        div.onclick = () => bicara(teks);
+        container.appendChild(div);
+      });
+    }
+
     window.onload = () => {
-      buatGridKategori(dataKategori);
+      renderGridKategori();
     };
   </script>
 
